crates/vexor-compiler/tests/golden/error/output/if_missing_braces.err
Error: parse error
   ╭─[ input:4:24 ]
   │
 4 │ val result = if r > 50 c else c
   │                        ┬  
   │                        ╰── expected `{`
───╯
